exports[`Parser > input '(a+)|(b+)' 1`] = `
[
  {
    "type": "union",
    "left": {
      "type": "capturing-group",
      "children": [
        {
          "type": "quantifier",
          "greedy": true,
          "min": 1,
          "max": null,
          "child": {
            "type": "word",
            "character": "a"
          }
        }
      ]
    },
    "right": {
      "type": "capturing-group",
      "children": [
        {
          "type": "quantifier",
          "greedy": true,
          "min": 1,
          "max": null,
          "child": {
            "type": "word",
            "character": "b"
          }
        }
      ]
    }
  }
]
`;

exports[`Parser > input '[-ab]' 1`] = `
[
  {
    "type": "alternative",
    "negated": false,
    "nodes": [
      {
        "type": "word",
        "character": "-"
      },
      {
        "type": "word",
        "character": "a"
      },
      {
        "type": "word",
        "character": "b"
      }
    ]
  }
]
`;

exports[`Parser > input '[^a-b]' 1`] = `
[
  {
    "type": "alternative",
    "negated": true,
    "nodes": [
      {
        "type": "range",
        "left": {
          "type": "word",
          "character": "a"
        },
        "right": {
          "type": "word",
          "character": "b"
        }
      }
    ]
  }
]
`;

exports[`Parser > input '[a-b]' 1`] = `
[
  {
    "type": "alternative",
    "negated": false,
    "nodes": [
      {
        "type": "range",
        "left": {
          "type": "word",
          "character": "a"
        },
        "right": {
          "type": "word",
          "character": "b"
        }
      }
    ]
  }
]
`;

exports[`Parser > input '[ab-]' 1`] = `
[
  {
    "type": "alternative",
    "negated": false,
    "nodes": [
      {
        "type": "word",
        "character": "a"
      },
      {
        "type": "word",
        "character": "b"
      },
      {
        "type": "word",
        "character": "-"
      }
    ]
  }
]
`;

exports[`Parser > input 'a(?:b)c' 1`] = `
[
  {
    "type": "word",
    "character": "a"
  },
  {
    "type": "non-capturing-group",
    "children": [
      {
        "type": "word",
        "character": "b"
      }
    ]
  },
  {
    "type": "word",
    "character": "c"
  }
]
`;

exports[`Parser > input 'a(?:b|c)c' 1`] = `
[
  {
    "type": "word",
    "character": "a"
  },
  {
    "type": "non-capturing-group",
    "children": [
      {
        "type": "union",
        "left": {
          "type": "word",
          "character": "b"
        },
        "right": {
          "type": "word",
          "character": "c"
        }
      }
    ]
  },
  {
    "type": "word",
    "character": "c"
  }
]
`;

exports[`Parser > input 'a(b)c' 1`] = `
[
  {
    "type": "word",
    "character": "a"
  },
  {
    "type": "capturing-group",
    "children": [
      {
        "type": "word",
        "character": "b"
      }
    ]
  },
  {
    "type": "word",
    "character": "c"
  }
]
`;

exports[`Parser > input 'ab*?c' 1`] = `
[
  {
    "type": "word",
    "character": "a"
  },
  {
    "type": "quantifier",
    "greedy": false,
    "min": 0,
    "max": null,
    "child": {
      "type": "word",
      "character": "b"
    }
  },
  {
    "type": "word",
    "character": "c"
  }
]
`;

exports[`Parser > input 'ab*c' 1`] = `
[
  {
    "type": "word",
    "character": "a"
  },
  {
    "type": "quantifier",
    "greedy": true,
    "min": 0,
    "max": null,
    "child": {
      "type": "word",
      "character": "b"
    }
  },
  {
    "type": "word",
    "character": "c"
  }
]
`;

exports[`Parser > input 'ab+c' 1`] = `
[
  {
    "type": "word",
    "character": "a"
  },
  {
    "type": "quantifier",
    "greedy": true,
    "min": 1,
    "max": null,
    "child": {
      "type": "word",
      "character": "b"
    }
  },
  {
    "type": "word",
    "character": "c"
  }
]
`;

exports[`Parser > input 'ab?c' 1`] = `
[
  {
    "type": "word",
    "character": "a"
  },
  {
    "type": "quantifier",
    "greedy": true,
    "min": 0,
    "max": 1,
    "child": {
      "type": "word",
      "character": "b"
    }
  },
  {
    "type": "word",
    "character": "c"
  }
]
`;

exports[`Parser > input 'ab{,2}c' 1`] = `
[
  {
    "type": "word",
    "character": "a"
  },
  {
    "type": "quantifier",
    "child": {
      "type": "word",
      "character": "b"
    },
    "greedy": true,
    "min": null,
    "max": 2
  },
  {
    "type": "word",
    "character": "c"
  }
]
`;

exports[`Parser > input 'ab{0,1}c' 1`] = `
[
  {
    "type": "word",
    "character": "a"
  },
  {
    "type": "quantifier",
    "child": {
      "type": "word",
      "character": "b"
    },
    "greedy": true,
    "min": 0,
    "max": 1
  },
  {
    "type": "word",
    "character": "c"
  }
]
`;

exports[`Parser > input 'ab{1,2}c' 1`] = `
[
  {
    "type": "word",
    "character": "a"
  },
  {
    "type": "quantifier",
    "child": {
      "type": "word",
      "character": "b"
    },
    "greedy": true,
    "min": 1,
    "max": 2
  },
  {
    "type": "word",
    "character": "c"
  }
]
`;

exports[`Parser > input 'ab{1,}c' 1`] = `
[
  {
    "type": "word",
    "character": "a"
  },
  {
    "type": "quantifier",
    "child": {
      "type": "word",
      "character": "b"
    },
    "greedy": true,
    "min": 1,
    "max": null
  },
  {
    "type": "word",
    "character": "c"
  }
]
`;

exports[`Parser > input 'ab{1}c' 1`] = `
[
  {
    "type": "word",
    "character": "a"
  },
  {
    "type": "quantifier",
    "child": {
      "type": "word",
      "character": "b"
    },
    "greedy": true,
    "min": 1,
    "max": 1
  },
  {
    "type": "word",
    "character": "c"
  }
]
`;

exports[`Parser > input 'a|b' 1`] = `
[
  {
    "type": "union",
    "left": {
      "type": "word",
      "character": "a"
    },
    "right": {
      "type": "word",
      "character": "b"
    }
  }
]
`;
